Toda estrutura da página html e css feitos.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
     />
   </head>
   <body>
+
+    <div class="mascara-form">
+      
+    </div>
+
+    <div class="menu">
+      <img src="./assets/logo-header.png" alt="logo-mario" />
+      <a href="#">Home</a>
+      <a href="#">Serviços</a>
+      <a href="#">Fale Conosco</a>
+    </div>
+
     <div class="caixa-mae">
       <div class="content">
         <img class="logo-mario-bros" src="./assets/logo.png" alt="Logo-Mario" />
-        <p>
+        <h1>
           Encanadores Mario e Luigi - Resolvendo seus problemas cotidianos com
           Estilo!
-        </p>
+        </h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid,
           soluta! Ducimus, veritatis? Praesentium omnis sed vel dolore eaque
@@ -40,6 +52,18 @@
 
     <div class="video">
       <video src="./assets/video.mp4" autoplay muted loop></video>
+      <div class="mascara"></div>
     </div>
+
+    <a href="#" class="link-whats"
+      ><img src="./assets/whatsapp.png" alt="logo-whatsapp"
+    /></a>
+
+    <form class="fale">
+      <input placeholder="Seu nome" />
+      <input placeholder="Seu telefone" />
+      <textarea placeholder="Digite seu problema"></textarea>
+      <button>Enviar</button>
+    </form>
   </body>
 </html>
