Projeto finalizado e responsividade ajustada.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div class="mascara-form">
+    <div class="mascara-form" onclick="esconderForm()">
       
     </div>
 
@@ -29,8 +29,7 @@
       <div class="content">
         <img class="logo-mario-bros" src="./assets/logo.png" alt="Logo-Mario" />
         <h1>
-          Encanadores Mario e Luigi - Resolvendo seus problemas cotidianos com
-          Estilo!
+          Encanadores Mario e Luigi - Resolvendo seus problemas cotidianos com Estilo!
         </h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid,
@@ -38,7 +37,7 @@
           magnam? Rerum vel natus a molestias dolorum ex nihil aspernatur
           cupiditate totam!
         </p>
-        <button>Entrar em contato agora</button>
+        <button onclick="cliqueiNoBotao()">Entrar em contato</button>
       </div>
 
       <div class="destaque">
@@ -66,4 +65,6 @@
       <button>Enviar</button>
     </form>
   </body>
+
+  <script src="scripts.js"></script>
 </html>
